--- a/assets/scss/_partials/_paginator.scss
+++ b/assets/scss/_partials/_paginator.scss
@@ -6,7 +6,7 @@
 	margin: 1rem auto;
 	font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
 	font-weight: 600;
-	font-size: clamp(1rem, 10vh, 1.33rem);
+	font-size: clamp(0.667rem, 2vh, 1rem);
 	padding: 1rem;
 	align-items: center;
 	justify-content: center;
